- updated doxygen-configuration-file

--- a/doc/doxy.cfg
+++ b/doc/doxy.cfg
@@ -1,11 +1,11 @@
-# Doxyfile 1.5.1
+# Doxyfile 1.6.1
 
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = MiXiM
 PROJECT_NUMBER         = 0
-OUTPUT_DIRECTORY       = AUTO
+OUTPUT_DIRECTORY       = doc/doxy
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
 USE_WINDOWS_ENCODING   = NO
@@ -43,7 +43,7 @@ SUBGROUPING            = YES
 #---------------------------------------------------------------------------
 # Build related configuration options
 #---------------------------------------------------------------------------
-EXTRACT_ALL            = YES
+EXTRACT_ALL            = NO
 EXTRACT_PRIVATE        = YES
 EXTRACT_STATIC         = YES
 EXTRACT_LOCAL_CLASSES  = YES
@@ -82,7 +82,7 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = .
+INPUT                  = ./base ./modules ./examples ./doc
 FILE_PATTERNS          = *.c \
                          *.cc \
                          *.cxx \
@@ -125,14 +125,7 @@ FILE_PATTERNS          = *.c \
                          *.MM \
                          *.PY
 RECURSIVE              = YES
-EXCLUDE                = ./bin \
-                         ./configurator \ 
-                         ./development/ \
-                         ./documentation/ \
-                         ./include \
-                         ./lib \
-                         ./out \
-			 ./tests 
+EXCLUDE                = 
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = *_n.cc *_n.h *_m.cc *_m.h 
 EXAMPLE_PATH           = 
