- removed doc/ folder from doxygen input

--- a/doc/doxy.cfg
+++ b/doc/doxy.cfg
@@ -82,7 +82,7 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = ./base ./modules ./examples ./doc
+INPUT                  = ./base ./modules ./examples
 FILE_PATTERNS          = *.c \
                          *.cc \
                          *.cxx \
