--- a/examples/analogueModels/omnetpp.ini
+++ b/examples/analogueModels/omnetpp.ini
@@ -10,7 +10,7 @@ network = AnalogueModels
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
-AnalogueModels.**.coreDebug = false
+AnalogueModels.**.coreDebug = true
 AnalogueModels.playgroundSizeX = 300m
 AnalogueModels.playgroundSizeY = 300m
 AnalogueModels.playgroundSizeZ = 300m
@@ -25,7 +25,6 @@ AnalogueModels.world.use2D = false
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
-AnalogueModels.connectionManager.coreDebug = false
 AnalogueModels.connectionManager.sendDirect = false
 AnalogueModels.connectionManager.pMax = 100mW
 AnalogueModels.connectionManager.sat = -90dBm
@@ -35,32 +34,27 @@ AnalogueModels.connectionManager.carrierFrequency = 2.4e+9Hz
 ##########################################################
 #             Host specific parameters                   #
 ##########################################################
-AnalogueModels.*Node*.utility.coreDebug = false
+AnalogueModels.node[*].nic.connectionManagerName = "connectionManager"
 
 ################ PhyLayer parameters #####################
 AnalogueModels.node[*].nic.phy.usePropagationDelay = false
-AnalogueModels.node[*].nic.phy.thermalNoise = 1.0
+AnalogueModels.node[*].nic.phy.thermalNoise = 1.0 dBm
+AnalogueModels.node[*].nic.phy.useThermalNoise = true
         
 AnalogueModels.node[*].nic.phy.analogueModels = xmldoc("config.xml")
 AnalogueModels.node[*].nic.phy.decider = xmldoc("config.xml")
 
-AnalogueModels.node[*].nic.phy.timeRXToTX = 0.00021
-AnalogueModels.node[*].nic.phy.timeRXToSleep = 0.000031
+AnalogueModels.node[*].nic.phy.timeRXToTX = 0.00021s
+AnalogueModels.node[*].nic.phy.timeRXToSleep = 0.000031s
 
-AnalogueModels.node[*].nic.phy.timeTXToRX = 0.00012
-AnalogueModels.node[*].nic.phy.timeTXToSleep = 0.000032
+AnalogueModels.node[*].nic.phy.timeTXToRX = 0.00012s
+AnalogueModels.node[*].nic.phy.timeTXToSleep = 0.000032s
 
-AnalogueModels.node[*].nic.phy.timeSleepToRX = 0.000102
-AnalogueModels.node[*].nic.phy.timeSleepToTX = 0.000203
+AnalogueModels.node[*].nic.phy.timeSleepToRX = 0.000102s
+AnalogueModels.node[*].nic.phy.timeSleepToTX = 0.000203s
 AnalogueModels.node[*].nic.phy.initialRadioState = 2
-##########################################################
-#                   hosts parameters                     #
-##########################################################
-AnalogueModels.node[*].nic.connectionManagerName = "connectionManager"
-
-################ PhyLayer parameters #####################
-AnalogueModels.node[*].nic.phy.sensitivity = -90
-AnalogueModels.node[*].nic.phy.maxTXPower = 100.0
+AnalogueModels.node[*].nic.phy.sensitivity = -90 dBm
+AnalogueModels.node[*].nic.phy.maxTXPower = 100.0 mW
 
 ################ Mobility parameters #####################
 AnalogueModels.node[0].mobility.x = 100
@@ -79,3 +73,5 @@ sim-time-limit = 2.0s
 [Config WithPropDelay]
 AnalogueModels.numHosts = 2
 AnalogueModels.node[*].nic.phy.usePropagationDelay = true
+
+
