--- a/templates/baseNetworkWizard/template.properties
+++ b/templates/baseNetworkWizard/template.properties
@@ -4,7 +4,8 @@ templateCategory = MiXiM
 supportedWizardTypes = project, simulation
 
 # template variables
-#...
+protocolName = "CSMA"
 
 # custom wizard pages
-#...
+page.1.file = protocol.xswt
+page.1.title = NIC protocol
