- updated expected output for power tests - updated required omnetpp verison in INSTALL - updated makemakefiles

--- a/tests/power/deviceTestAccts/omnetpp.ini
+++ b/tests/power/deviceTestAccts/omnetpp.ini
@@ -10,7 +10,7 @@ output-scalar-precision = 6
 output-vector-precision = 6
 
 # by default, just record the primary time series
-sim.host[*].batteryStats.capacity(mW-s).vector-recording = true
+sim.host[*].batteryStats.capacity.vector-recording = true
 sim.host[*].batteryStats.*.vector-recording = false
 
 
