--- a/tests/power/deviceTest/omnetpp.ini
+++ b/tests/power/deviceTest/omnetpp.ini
@@ -15,7 +15,7 @@ output-vector-precision = 6
 
 
 # by default, just record the primary time series
-sim.host[*].batteryStats.capacity(mW-s).vector-recording = true
+sim.host[*].batteryStats.capacity.vector-recording = true
 sim.host[*].batteryStats.*.vector-recording = false
 
 
