--- a/examples/traci_launchd/omnetpp.ini
+++ b/examples/traci_launchd/omnetpp.ini
@@ -12,63 +12,105 @@ cmdenv-status-frequency = 10000000s
 
 #tkenv-default-run = 1
 
+ned-path = ../../base;../../modules;../../examples;
+
 tkenv-image-path = bitmaps
 **.debug = true
 **.coreDebug = false
 
-*.playgroundSizeX = 10672 #[m]
-*.playgroundSizeY = 7105 #[m]
+*.playgroundSizeX = 10672m
+*.playgroundSizeY = 7105m
+*.playgroundSizeZ = 10000m
+*.world.useTorus = false
+*.world.use2D = false
 
 # Car::TraCIMobility
-*.host[*].mobility.accidentCount = 0
-*.host[*].mobility.accidentStart = -1s
-*.host[*].mobility.accidentDuration = -1s
-*.host[*].mobility.accidentInterval = -1s
+*.node[*].mobility.accidentCount = 0
+*.node[*].mobility.accidentStart = -1s
+*.node[*].mobility.accidentDuration = -1s
+*.node[*].mobility.accidentInterval = -1s
 
 # TraCIScenarioManagerLaunchd
 *.manager.updateInterval = 1s
 *.manager.host = "localhost"
 *.manager.port = 9999
-*.manager.moduleType = "inet.examples.traci_launchd.Car"
-*.manager.moduleName = "host"
-*.manager.moduleDisplayString = "i=misc/node2;is=vs;r=0,,#707070,1"
+*.manager.moduleType = "org.mixim.examples.traci_launchd.Car"
+*.manager.moduleName = "node"
+*.manager.moduleDisplayString = "i=misc/node2_vs"
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.launchConfig = xmldoc("sumo-launchd.launch.xml")
 
-# Network layer
-**.networkLayer.ip.procDelay = 10us
-**.networkLayer.arp.retryTimeout = 1s
-**.networkLayer.arp.retryCount = 3
-**.networkLayer.arp.cacheTimeout = 100s
+##########################################################
+#			         channel parameters                  #
+##########################################################
+*.connectionManager.sendDirect = false
+*.connectionManager.pMax = 100mW
+*.connectionManager.sat = -84dBm
+*.connectionManager.alpha = 3.0
+*.connectionManager.carrierFrequency = 2.412e+9Hz
 
-# WiFi link layer
-**.wlan.mac.address = "auto"
-**.wlan.mac.maxQueueSize = 14
-**.wlan.mac.rtsCts = false
-**.wlan.mac.bitrate = 11Mbps
-**.wlan.mac.broadcastBackoff = 31
-**.wlan.decider.snirThreshold = 4dB
-**.wlan.decider.bitrate = 11Mbps
-**.wlan.snrEval.bitrate = 11Mbps
-**.wlan.snrEval.headerLength = 192b
-**.wlan.snrEval.thermalNoise = -110dBm
-**.wlan.snrEval.sensitivity = -85dBm
-**.wlan.snrEval.pathLossAlpha = 1.9
-**.wlan.snrEval.carrierFrequency = 2.4GHz
-**.wlan.snrEval.channelNumber = 0
-*.channelcontrol.carrierFrequency = 2.4GHz
-**.wlan.snrEval.transmitterPower = 2mW
-*.channelcontrol.pMax = 2mW
-*.channelcontrol.sat = -80dBm
-*.channelcontrol.alpha = 1.9
-*.channelcontrol.numChannels = 1
+
+################ PhyLayer parameters #####################
+*.node[*].nic.phy.usePropagationDelay = false
+*.node[*].nic.phy.thermalNoise = -100dBm
+*.node[*].nic.phy.useThermalNoise = true
+        
+*.node[*].nic.phy.analogueModels = xmldoc("config.xml")
+*.node[*].nic.phy.decider = xmldoc("config.xml")
+
+*.node[*].nic.phy.timeRXToTX = 0.00021s
+*.node[*].nic.phy.timeRXToSleep = 0.000031s
+
+*.node[*].nic.phy.timeTXToRX = 0.00012s
+*.node[*].nic.phy.timeTXToSleep = 0.000032s
+
+*.node[*].nic.phy.timeSleepToRX = 0.000102s
+*.node[*].nic.phy.timeSleepToTX = 0.000203s
+
+*.node[*].nic.phy.sensitivity = -80dBm
+*.node[*].nic.phy.maxTXPower = 100.0mW
+
+*.node[*].nic.phy.initialRadioState = 0
+
+################ MAC layer parameters ####################
+*.node[*].nic.mac.queueLength = 5
+*.node[*].nic.mac.headerLength = 24bit
+*.node[*].nic.mac.slotDuration = 0.04s
+*.node[*].nic.mac.difs = 0.0005s
+*.node[*].nic.mac.maxTxAttempts = 14
+*.node[*].nic.mac.defaultChannel = 0
+*.node[*].nic.mac.bitrate = 15360bps
+*.node[*].nic.mac.contentionWindow = 20
+*.node[*].nic.mac.txPower = 100mW  # [mW]
+
+################ NETW layer parameters ####################
+*.node[*].net.isSwitch = false
+*.node[*].net.maxTtl = 3
+*.node[*].net.boredTime = 0.5
 
 **.udpapp.*.vector-recording = true
 **.vector-recording = true
 
+*.node[*].nic.phy.useThermalNoise = true
+*.node[*].applType = "BurstApplLayer"
+*.node[*].mobType = "TraCIMobility"
+*.node[*].netwType = "BaseNetwLayer"
+*.node[*].appl.debug = false
+*.node[*].appl.headerLength = 512bit
+*.node[*].net.debug = false
+*.node[*].net.stats = false
+*.node[*].net.headerLength = 32bit
+*.node[*].appl.burstSize = 3
+*.node[*].mobility.debug = false
+*.node[*].mobility.speed = 1mps
+*.node[*].mobility.updateInterval = 0.1s
+*.node[*].mobility.x = 0
+*.node[*].mobility.y = 0
+*.node[*].mobility.z = 0
+
 [Config config1]
-*.host[10].mobility.accidentCount = 1
-*.host[10].mobility.accidentStart = 115s
-*.host[10].mobility.accidentDuration = 240s
+*.node[10].mobility.accidentCount = 1
+*.node[10].mobility.accidentStart = 115s
+*.node[10].mobility.accidentDuration = 240s
 
