--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -22,9 +22,10 @@ cmdenv-module-messages = true
 #       Parameters for the entire simulation                                 #
 ##############################################################################
 
-Mac80211.playgroundSizeX = 500m
-Mac80211.playgroundSizeY = 500m
-Mac80211.numHosts = 10
+**.playgroundSizeX = 500m
+**.playgroundSizeY = 500m
+**.playgroundSizeZ = 0
+**.numHosts = 10
 
 # uncomment to enable debug messages for all modules
 # **.debug = 0
@@ -34,22 +35,22 @@ Mac80211.numHosts = 10
 ##########################################################
 #			WorldUtility parameters                      #
 ##########################################################
-Mac80211.world.useTorus = false
-Mac80211.world.use2D = true
+**.world.useTorus = false
+**.world.use2D = true
+
 
 ##############################################################################
 #       Parameters for the ConnectionManager                                 #
 ##############################################################################
-Mac80211.connectionManager.carrierFrequency = 2.4e+9Hz  # [Hz]
+**.connectionManager.carrierFrequency = 2.4e+9Hz  # [Hz]
 
 # max transmission power [mW]
-Mac80211.connectionManager.pMax = 110.11mW  # [mW]
+**.connectionManager.pMax = 110.11mW  # [mW]
 # signal attenuation threshold [dBm]
-Mac80211.connectionManager.sat = -120dBm  # [dBm]
+**.connectionManager.sat = -120dBm  # [dBm]
 # path loss coefficient alpha
-Mac80211.connectionManager.alpha = 4
-Mac80211.connectionManager.sendDirect = false
-
+**.connectionManager.alpha = 4
+**.connectionManager.sendDirect = false
 
 
 ##############################################################################
@@ -57,46 +58,47 @@ Mac80211.connectionManager.sendDirect = false
 ##############################################################################
 
 # debug switch
-Mac80211.host[*].mobility.debug = false
+**.mobility.debug = false
 
 # if set to 0 the MN does not move
-Mac80211.host[*].mobility.speed = 0mps
-Mac80211.host[*].mobility.updateInterval = 0.5s
+**.mobility.speed = 0mps
+**.mobility.updateInterval = 0.5s
 
 # starting position for the hosts "-1" means random staring point
 # starting position for the hosts "-1" means random staring point
-Mac80211.host[0].mobility.x = 30
-Mac80211.host[0].mobility.y = 75
+**.host[0].mobility.x = 30
+**.host[0].mobility.y = 75
 
-Mac80211.host[1].mobility.x = 290
-Mac80211.host[1].mobility.y = 160
+**.host[1].mobility.x = 290
+**.host[1].mobility.y = 160
 
-Mac80211.host[2].mobility.x = 420
-Mac80211.host[2].mobility.y = 120
+**.host[2].mobility.x = 420
+**.host[2].mobility.y = 120
 
-Mac80211.host[3].mobility.x = 380
-Mac80211.host[3].mobility.y = 30
+**.host[3].mobility.x = 380
+**.host[3].mobility.y = 30
 
-Mac80211.host[4].mobility.x = 220
-Mac80211.host[4].mobility.y = 60
+**.host[4].mobility.x = 220
+**.host[4].mobility.y = 60
 
-Mac80211.host[5].mobility.x = 450
-Mac80211.host[5].mobility.y = 320
+**.host[5].mobility.x = 450
+**.host[5].mobility.y = 320
 
-Mac80211.host[6].mobility.x = 150
-Mac80211.host[6].mobility.y = 155
+**.host[6].mobility.x = 150
+**.host[6].mobility.y = 155
 
-Mac80211.host[7].mobility.x = 330
-Mac80211.host[7].mobility.y = 280
+**.host[7].mobility.x = 330
+**.host[7].mobility.y = 280
 
-Mac80211.host[8].mobility.x = 70
-Mac80211.host[8].mobility.y = 257
+**.host[8].mobility.x = 70
+**.host[8].mobility.y = 257
 
-Mac80211.host[9].mobility.x = 150
-Mac80211.host[9].mobility.y = 300
+**.host[9].mobility.x = 150
+**.host[9].mobility.y = 300
 
-Mac80211.host[*].mobility.x = -1
-Mac80211.host[*].mobility.y = -1
+**.host[*].mobility.x = -1
+**.host[*].mobility.y = -1
+**.mobility.z = 0
 
 ##############################################################################
 #       Parameters for the Host                                              #
@@ -107,15 +109,16 @@ Mac80211.host[*].mobility.y = -1
 ##############################################################################
 
 # debug switch
-Mac80211.host[*].appl.debug = false
-Mac80211.host[*].appl.headerLength = 1024bit
-Mac80211.host[*].appl.burstSize = 3
+**.appl.debug = false
+**.appl.headerLength = 1024bit
+**.appl.burstSize = 3
 
 ##############################################################################
 #       Parameters for the Network Layer                                     #
 ##############################################################################
-Mac80211.host[*].net.headerLength = 32bit# in bits
-Mac80211.host[*].net.debug = false
+**.net.headerLength = 32bit# in bits
+**.net.debug = false
+**.net.stats = false
 
 ##############################################################################
 #       Parameters for ARP
@@ -126,30 +129,28 @@ Mac80211.host[*].net.debug = false
 ##############################################################################
 
 # debug switch
-Mac80211.host[*].nic.mac.headerLength = 272 bit
-Mac80211.host[*].nic.mac.queueLength = 14
-Mac80211.host[*].nic.mac.bitrate = 2E+6bps# in bits/second
-Mac80211.host[*].nic.mac.defaultChannel = 0
-Mac80211.host[*].nic.mac.autoBitrate = false
+**.mac.headerLength = 272 bit
+**.mac.queueLength = 14
+**.mac.bitrate = 2E+6bps# in bits/second
+**.mac.defaultChannel = 0
+**.mac.autoBitrate = false
 
 ### values if no fading is modelled, gives at most 1% packet error rate
-Mac80211.host[*].nic.mac.snr2Mbit = 1.46dB  # [dB]
-Mac80211.host[*].nic.mac.snr5Mbit = 2.6dB  # [dB]
-Mac80211.host[*].nic.mac.snr11Mbit = 5.68dB  # [dB]
+**.mac.snr2Mbit = 1.46dB  # [dB]
+**.mac.snr5Mbit = 2.6dB  # [dB]
+**.mac.snr11Mbit = 5.68dB  # [dB]
 
-Mac80211.host[*].nic.mac.rtsCtsThreshold = 400
-Mac80211.host[*].nic.mac.neighborhoodCacheSize = 30
-Mac80211.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
+**.mac.rtsCtsThreshold = 400
+**.mac.neighborhoodCacheSize = 30
+**.mac.neighborhoodCacheMaxAge = 100s  # [s]
+
+**.mac.txPower = 110.11mW  # [mW]
+**.mac.centerFrequency = 2.412e9Hz
 
 ##############################################################################
 #       Parameters for the Phy                                               #
 ##############################################################################
 
-# debug switch
-**.playgroundSizeZ = 0
-**.net.stats = false
-**.mac.txPower = 110.11mW  # [mW]
-**.mac.centerFrequency = 2.412e9Hz
 **.phy.usePropagationDelay = false
 **.phy.thermalNoise = -110dBm  # [dBm]
 **.phy.analogueModels = xmldoc("config.xml")
@@ -163,6 +164,23 @@ Mac80211.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
 **.phy.timeSleepToRX = 0s
 **.phy.timeSleepToTX = 0s
 **.phy.initialRadioState = 0
-**.mobility.z = 0
+
 **.phy.headerLength = 192bit
-Mac80211.host[*].nic.phy.useThermalNoise = true
+**.phy.useThermalNoise = true
+
+
+
+[Config HiddenStation]
+description = "Host configuration of the hidden station scneario"
+**.numHosts = 3
+**.playgroundSizeX = 500m
+**.playgroundSizeY = 500m
+
+**.host[0].mobility.x = 30
+**.host[0].mobility.y = 100
+
+**.host[1].mobility.x = 230
+**.host[1].mobility.y = 100
+
+**.host[2].mobility.x = 420
+**.host[2].mobility.y = 100
