--- a/templates/baseNetworkWizard/template.properties
+++ b/templates/baseNetworkWizard/template.properties
@@ -5,6 +5,9 @@ supportedWizardTypes = project, simulation
 
 # template variables
 protocolName = "CSMA"
+applName = "Burst Application Layer"
+mobilityName = "Static (no mobility)"
+dimensions = "2-dimensional"
 
 # custom wizard pages
 page.1.file = protocol.xswt
