- added "getConnectionManager()" method to BaseMacLayer which returns the correct ConnectionManager module of this MACs NIC

--- a/examples/multiConnectionManager/omnetpp.ini
+++ b/examples/multiConnectionManager/omnetpp.ini
@@ -62,7 +62,6 @@ MultiConnectionManager.*Node[*].nic.mac.maxTxAttempts = 14
 MultiConnectionManager.*Node[*].nic.mac.defaultChannel = 0
 MultiConnectionManager.*Node[*].nic.mac.bitrate = 15360bps
 MultiConnectionManager.*Node[*].nic.mac.contentionWindow = 20
-MultiConnectionManager.*Node[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ PhyLayer parameters #####################
 MultiConnectionManager.*Node*.nic.phy.usePropagationDelay = false
@@ -86,6 +85,8 @@ MultiConnectionManager.*Node*.nic.phy.initialRadioState = 0
 ##########################################################
 MultiConnectionManager.GSMNode[*].nic.connectionManagerName = "GSMChannel"
 
+MultiConnectionManager.GSMNode[*].nic.mac.txPower = 20mW  # [mW]
+
 ################ PhyLayer parameters #####################
 MultiConnectionManager.GSMNode[*].nic.phy.sensitivity = -100.5dBm
 MultiConnectionManager.GSMNode[*].nic.phy.maxTXPower = 20.0mW
@@ -108,6 +109,8 @@ MultiConnectionManager.GSMNode[1].mobility.z = 100
 #              ISM hosts parameters                   #
 ##########################################################
 MultiConnectionManager.ISMNode[*].nic.connectionManagerName = "ISMChannel"
+
+MultiConnectionManager.ISMNode[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ PhyLayer parameters #####################
 MultiConnectionManager.ISMNode[*].nic.phy.sensitivity = -119.5dBm
