- completed MixnetBridge but not fully tested until MIxNETWorldUtility is done

--- a/MIxNET/example/omnetpp.ini
+++ b/MIxNET/example/omnetpp.ini
@@ -90,7 +90,7 @@ num-rngs = 3
 **.wlan.mac.neighborhoodCacheMaxAge = 100s  # [s]
 
 **.wlan.mac.txPower = 110.11mW  # [mW]
-**.wlan.mac.centerFrequency = 2.412e9Hz
+**.wlan.mac.centerFrequency = 2.4e+9Hz
 
 ##############################################################################
 #       Parameters for the Phy                                               #
