--- a/.cproject
+++ b/.cproject
@@ -51,7 +51,7 @@
 </toolChain>
 </folderInfo>
 <sourceEntries>
-<entry excluding="out/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+<entry excluding="MIxNET|out/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 </sourceEntries>
 </configuration>
 </storageModule>
@@ -398,7 +398,7 @@
 </toolChain>
 </folderInfo>
 <sourceEntries>
-<entry excluding="out/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+<entry excluding="MIxNET|out/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 </sourceEntries>
 </configuration>
 </storageModule>
