--- a/inet/.project
+++ b/inet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MIxNETExample</name>
+	<name>Mixnet</name>
 	<comment></comment>
 	<projects>
 		<project>inet</project>
