- cleanup of adhoc example

--- a/inet/examples/adhoc/omnetpp.ini
+++ b/inet/examples/adhoc/omnetpp.ini
@@ -1,9 +1,7 @@
 [General]
-network = Net80211
+network = Adhoc
 tkenv-default-config = Ping1
 tkenv-plugin-path = ../../../etc/plugins
-#cmdenv-output-file = omnetpp.log
-#debug-on-errors = true
 num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan.mac.rng-0 = 2
@@ -12,16 +10,7 @@ num-rngs = 3
 *.world.playgroundSizeY = 400m
 *.world.playgroundSizeZ = 0m
 
-**.debug = true
 **.coreDebug = true
-**.host*.**.channelNumber = 0
-
-# channel physical parameters
-*.channelcontrol.carrierFrequency = 2.4GHz
-*.channelcontrol.pMax = 2mW
-*.channelcontrol.sat = -110dBm
-*.channelcontrol.alpha = 2
-*.channelcontrol.numChannels = 1
 
 ##########################################################
 #			WorldUtility parameters                      #
@@ -36,11 +25,11 @@ num-rngs = 3
 **.connectionManager.carrierFrequency = 2.4e+9Hz  # [Hz]
 
 # max transmission power [mW]
-**.connectionManager.pMax = 110.11mW  # [mW]
+**.connectionManager.pMax = 100.0mW  # [mW]
 # signal attenuation threshold [dBm]
-**.connectionManager.sat = -110dBm  # [dBm]
+**.connectionManager.sat = -100dBm  # [dBm]
 # path loss coefficient alpha
-**.connectionManager.alpha = 2
+**.connectionManager.alpha = 3
 **.connectionManager.sendDirect = false
 
 
@@ -48,14 +37,13 @@ num-rngs = 3
 #       Parameters for the Mobility Module                                   #
 ##############################################################################
 
-**.host*.mobilityType = "org.mixim.base.modules.BaseMobility"
-# debug switch
-**.mobility.debug = false
+**.host*.mobilityType = "org.mixim.modules.mobility.ConstSpeedMobility"
 
 # if set to 0 the MN does not move
-**.mobility.speed = 0mps
+**.mobility.speed = 7mps
 **.mobility.updateInterval = 0.5s
 **.mobility.z = 0
+**.mobility.debug = false
 
 # mobility
 **.host*.mobility.x = -1
@@ -89,7 +77,7 @@ num-rngs = 3
 **.wlan.mac.neighborhoodCacheSize = 30
 **.wlan.mac.neighborhoodCacheMaxAge = 100s  # [s]
 
-**.wlan.mac.txPower = 110.11mW  # [mW]
+**.wlan.mac.txPower = 100.0mW  # [mW]
 **.wlan.mac.centerFrequency = 2.4e+9Hz
 
 ##############################################################################
@@ -97,11 +85,11 @@ num-rngs = 3
 ##############################################################################
 
 **.wlan.phy.usePropagationDelay = false
-**.wlan.phy.thermalNoise = -110dBm  # [dBm]
+**.wlan.phy.thermalNoise = -100dBm  # [dBm]
 **.wlan.phy.analogueModels = xmldoc("config.xml")
 **.wlan.phy.decider = xmldoc("config.xml")
-**.wlan.phy.sensitivity = -119.5dBm  # [dBm]
-**.wlan.phy.maxTXPower = 110.11mW
+**.wlan.phy.sensitivity = -100.0dBm  # [dBm]
+**.wlan.phy.maxTXPower = 100.0mW
 **.wlan.phy.timeRXToTX = 0s
 **.wlan.phy.timeRXToSleep = 0s
 **.wlan.phy.timeTXToRX = 0s
@@ -110,7 +98,6 @@ num-rngs = 3
 **.wlan.phy.timeSleepToTX = 0s
 **.wlan.phy.initialRadioState = 0
 
-**.wlan.phy.headerLength = 192bit
 **.wlan.phy.useThermalNoise = true
 
 
