--- a/inet/examples/hybrid/omnetpp.ini
+++ b/inet/examples/hybrid/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = Lan80211
+network = Hybrid
 tkenv-plugin-path = ../../../etc/plugins
 
 
@@ -44,7 +44,7 @@ tkenv-plugin-path = ../../../etc/plugins
 # signal attenuation threshold [dBm]
 **.connectionManager.sat = -110dBm  # [dBm]
 # path loss coefficient alpha
-**.connectionManager.alpha = 2
+**.connectionManager.alpha = 3
 **.connectionManager.sendDirect = true
 
 ##############################################################################
