- more cleanup of mixnet examples

--- a/inet/examples/adhoc/omnetpp.ini
+++ b/inet/examples/adhoc/omnetpp.ini
@@ -6,9 +6,9 @@ num-rngs = 3
 **.mobility.rng-0 = 1
 **.wlan.mac.rng-0 = 2
 
-*.world.playgroundSizeX = 600m
-*.world.playgroundSizeY = 400m
-*.world.playgroundSizeZ = 0m
+*.playgroundSizeX = 600m
+*.playgroundSizeY = 400m
+*.playgroundSizeZ = 0m
 
 **.coreDebug = true
 
