--- a/inet/examples/hybrid/omnetpp.ini
+++ b/inet/examples/hybrid/omnetpp.ini
@@ -3,9 +3,9 @@ network = Hybrid
 tkenv-plugin-path = ../../../etc/plugins
 
 
-*.world.playgroundSizeX = 600m
-*.world.playgroundSizeY = 400m
-*.world.playgroundSizeZ = 0m
+*.playgroundSizeX = 600m
+*.playgroundSizeY = 400m
+*.playgroundSizeZ = 0m
 **.coreDebug = false
 
 
@@ -45,7 +45,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.connectionManager.sat = -110dBm  # [dBm]
 # path loss coefficient alpha
 **.connectionManager.alpha = 3
-**.connectionManager.sendDirect = true
+**.connectionManager.sendDirect = false
 
 ##############################################################################
 #       Parameters for the Mac Layer                                         #
