- first version of hybrid-network extended by 802.15.4-host

--- a/inet/examples/hybrid/omnetpp.ini
+++ b/inet/examples/hybrid/omnetpp.ini
@@ -2,7 +2,7 @@
 network = Hybrid
 tkenv-plugin-path = ../../../etc/plugins
 
-
+### playground settings
 *.playgroundSizeX = 600m
 *.playgroundSizeY = 400m
 *.playgroundSizeZ = 0m
@@ -10,7 +10,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 
 
-# mobility
+### mobility parameters
 **.mobilityType = "BaseMobility"
 **.mobility.z = 0
 
@@ -18,14 +18,16 @@ tkenv-plugin-path = ../../../etc/plugins
 *.hybridRouter.mobility.y = 200
 *.wlanHost.mobility.x = 400
 *.wlanHost.mobility.y = 300
-# ping app (host[0] pinged by others)
-*.etherHost.pingApp.destAddr = ""
-*.wlanHost.pingApp.destAddr = "etherHost"
-**.pingApp.interval = 10ms
+*.lrwpanHost.mobility.x = 380
+*.lrwpanHost.mobility.y = 220
 
+
+### routing files for every host
 **.etherHost.routingFile = "etherHost.route"
 **.wlanHost.routingFile = "wlanHost.route"
+**.lrwpanHost.routingFile = "lrwpanHost.route"
 **.hybridRouter.routingFile = "hybridRouter.route"
+
 
 ##########################################################
 #			WorldUtility parameters                      #
@@ -35,20 +37,23 @@ tkenv-plugin-path = ../../../etc/plugins
 
 
 ##############################################################################
-#       Parameters for the ConnectionManager                                 #
+#       Parameters for the 802.11 ConnectionManager                          #
 ##############################################################################
-**.connectionManager.carrierFrequency = 2.4e+9Hz  # [Hz]
+**.wlan.connectionManagerName = "wlanChannel"
+
+**.wlanChannel.carrierFrequency = 2.4e+9Hz  # [Hz]
 
 # max transmission power [mW]
-**.connectionManager.pMax = 110.11mW  # [mW]
+**.wlanChannel.pMax = 110.11mW  # [mW]
 # signal attenuation threshold [dBm]
-**.connectionManager.sat = -110dBm  # [dBm]
+**.wlanChannel.sat = -110dBm  # [dBm]
 # path loss coefficient alpha
-**.connectionManager.alpha = 3
-**.connectionManager.sendDirect = false
+**.wlanChannel.alpha = 3
+**.wlanChannel.sendDirect = false
+
 
 ##############################################################################
-#       Parameters for the Mac Layer                                         #
+#       Parameters for the 802.11 MAC-Layer                                  #
 ##############################################################################
 
 # debug switch
@@ -71,13 +76,13 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan.mac.centerFrequency = 2.4e+9Hz
 
 ##############################################################################
-#       Parameters for the Phy                                               #
+#       Parameters for the 802.11 Phy                                        #
 ##############################################################################
 
 **.wlan.phy.usePropagationDelay = false
 **.wlan.phy.thermalNoise = -110dBm  # [dBm]
-**.wlan.phy.analogueModels = xmldoc("config.xml")
-**.wlan.phy.decider = xmldoc("config.xml")
+**.wlan.phy.analogueModels = xmldoc("wlanConfig.xml")
+**.wlan.phy.decider = xmldoc("wlanConfig.xml")
 **.wlan.phy.sensitivity = -119.5dBm  # [dBm]
 **.wlan.phy.maxTXPower = 110.11mW
 **.wlan.phy.timeRXToTX = 0s
@@ -90,7 +95,81 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan.phy.useThermalNoise = true
 
 
+
+##############################################################################
+#       Parameters for the 802.15.4 ConnectionManager                        #
+##############################################################################
+**.lrwpan.connectionManagerName = "lrwpanChannel"
+
+**.lrwpanChannel.sendDirect = false
+**.lrwpanChannel.pMax = 1.1mW
+**.lrwpanChannel.sat = -100dBm
+**.lrwpanChannel.alpha = 2.5
+**.lrwpanChannel.carrierFrequency = 2.4E+9Hz
+
+##############################################################################
+#       Parameters for the 802.15.4 Phy                                      #
+##############################################################################
+
+**.lrwpan.phy.usePropagationDelay = false
+ 
+**.lrwpan.phy.analogueModels = xmldoc("lrwpanConfig.xml")
+#**.lrwpan.phy.decider = xmldoc("Nic802154_TI_CC2420_Decider.xml")
+**.lrwpan.phy.sensitivity = -100dBm
+**.lrwpan.phy.maxTXPower = 1.1mW
+**.lrwpan.phy.initialRadioState = 0
+**.lrwpan.phy.useThermalNoise = true
+
+
+##############################################################################
+#       Parameters for the 802.15.4 MAC-Layer                                #
+##############################################################################
+
+**.lrwpan.mac.txPower = 1mW  # [mW]
+**.lrwpan.mac.notAffectedByHostState = true
+**.lrwpan.mac.macMinBE = 1
+**.lrwpan.mac.macMaxBE = 6
+**.lrwpan.mac.macMaxCSMABackoffs = 20
+**.lrwpan.mac.macAckWaitDuration = 0.000864s
+**.lrwpan.mac.aUnitBackoffPeriod = 0.02s
+
+
+### battery-related parameters
+**.battery.debug = false
+**.battery.nominal = 99999mAh
+**.battery.capacity = 99999mAh
+**.battery.voltage = 3.3V
+**.battery.resolution = 0.1s
+**.battery.publishDelta = 1
+**.battery.publishTime = 0
+**.battery.numDevices = 1
+
+**.batteryStats.debug = false
+**.batteryStats.detail = false
+**.batteryStats.timeSeries = false
+
+
+### running configurations
+
+**.pingApp.interval = 10ms
+*.etherHost.pingApp.destAddr = ""
+*.wlanHost.pingApp.destAddr = ""
+*.lrwpanHost.pingApp.destAddr = ""
+
 [Config Ping1]
-description = "host1 pinging host0"
+description = "wlanHost pinging etherHost"
 
+# ping app (host[0] pinged by others)
+*.wlanHost.pingApp.destAddr = "etherHost"
 
+[Config Ping2]
+description = "lrwpanHost pinging etherHost"
+
+# ping app (host[0] pinged by others)
+*.lrwpanHost.pingApp.destAddr = "etherHost"
+
+[Config Ping3]
+description = "lrwpanHost pinging wlanHost"
+
+# ping app (host[0] pinged by others)
+*.lrwpanHost.pingApp.destAddr = "wlanHost"
