- completed mixnetBridge tests - reduced ping interval for 802.15.4 host in hybrid network

--- a/inet/examples/hybrid/omnetpp.ini
+++ b/inet/examples/hybrid/omnetpp.ini
@@ -151,6 +151,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 ### running configurations
 
+*.lrwpanHost.pingApp.interval = 50ms
 **.pingApp.interval = 10ms
 *.etherHost.pingApp.destAddr = ""
 *.wlanHost.pingApp.destAddr = ""
