--- a/inet/tests/mixnetBridge/omnetpp.ini
+++ b/inet/tests/mixnetBridge/omnetpp.ini
@@ -23,6 +23,12 @@ network = Network
 *.hostType = "AddressingTestHost"
 *.run = 3
 
+[Config Test6]
+network = Network
+*.hostType = "NoNICHost"
+*.run = 4
+
 [Config Test5]
 network = Network
 *.run = -1
+**.bridge.address = "auto"
