- added recording feature to ChannelInfo - made BasePhyLayer use recording feature during ChannelSenseRequests - added tests for recording feature - made "isIdle()" and "getRSSI()" method of ChannelState const - added planning of test cases to test library - cleaned up basePhyLayer test

--- a/tests/basePhyLayer/omnetpp.ini
+++ b/tests/basePhyLayer/omnetpp.ini
@@ -68,15 +68,10 @@ tbpSim.run = 3
 tbpSim.numHosts = 4
 tbpSim.node[*].nic.phy.useThermalNoise = true
 
-
-[Config TestBaseDecider1]
-#use 'TestBaseDecider' as Decider to test functionality of 'BaseDecider'
-tbpSim.run = 5 
-tbpSim.node[*].nic.phy.testBaseDecider = true
-#tbpSim.node[*].nic.phy.coreDebug = true
-#tbpSim.node[*].nic.phy.sensitivity = 4.0
-
-# specifies another config-file, as this run uses a BaseDecider
-tbpSim.node[*].nic.phy.analogueModels = xmldoc("config_testBaseDecider.xml")
+[Config Test6]
+#test switch radio
+#test sending on not TX
+#test sending on already sending
+tbpSim.run = 6
+tbpSim.numHosts = 2
 tbpSim.node[*].nic.phy.useThermalNoise = false
-tbpSim.node[*].nic.phy.decider = xmldoc("config_testBaseDecider.xml")
