--- a/inet/Makefile
+++ b/inet/Makefile
@@ -4,14 +4,19 @@ all: checkmakefiles
 
 clean: checkmakefiles
 	cd src && $(MAKE) clean
+	cd tests && $(MAKE) clean
 
 cleanall: checkmakefiles
 	cd src && $(MAKE) MODE=release clean
 	cd src && $(MAKE) MODE=debug clean
+	cd tests && $(MAKE) MODE=release clean
+	cd tests && $(MAKE) MODE=debug clean
 	rm -f src/Makefile
+	rm -f tests/Makefile
 
 makefiles:
 	cd src && opp_makemake -f --deep --make-so -o mixnet -O out $$NSC_VERSION_DEF
+	cd tests && opp_makemake -f --deep --make-so -o mixnet -O out $$NSC_VERSION_DEF
 
 checkmakefiles:
 	@if [ ! -f src/Makefile ]; then \
