- added first (not yet executed) tests for phy protocol ids - added planning of modules expected to be present in a test run to TestManager

--- a/tests/basePhyLayer/omnetpp.ini
+++ b/tests/basePhyLayer/omnetpp.ini
@@ -54,24 +54,22 @@ tbpSim.node[*].mobility.z = 100
 tbpSim.node[*].mobility.coreDebug = false
 
 [Config Test1]
-#test switch radio
-#test sending on not TX
-#test sending on already sending
 tbpSim.run = ${1,2}
 tbpSim.node[*].nic.phy.useThermalNoise = true
 
 [Config Test2]
-#test switch radio
-#test sending on not TX
-#test sending on already sending
 tbpSim.run = 3
 tbpSim.numHosts = 4
 tbpSim.node[*].nic.phy.useThermalNoise = true
 
 [Config Test6]
-#test switch radio
-#test sending on not TX
-#test sending on already sending
 tbpSim.run = 6
 tbpSim.numHosts = 2
 tbpSim.node[*].nic.phy.useThermalNoise = false
+
+[Config Test7]
+tbpSim.run = 7
+tbpSim.numHosts = 4
+tbpSim.node[*].nic.phy.useThermalNoise = false
+tbpSim.node[0..1].nic.phy.protocol = 1
+tbpSim.node[2..3].nic.phy.protocol = 2
